Added get all users to swagger
